Fixing search box scrollbar, blockquote padding

--- a/source/css/scss/base/_globals.scss
+++ b/source/css/scss/base/_globals.scss
@@ -11,3 +11,11 @@ body {
   padding-left: 50px;
   padding-right: 50px;
 }
+
+.align--left {
+  float: left;
+}
+
+.align--right {
+  float: right;
+}
