--- a/source/css/scss/patterns/03-organisms/_header.scss
+++ b/source/css/scss/patterns/03-organisms/_header.scss
@@ -38,7 +38,7 @@
     }
   }
   .header__social-media-search {
-    overflow: auto;
+    overflow: hidden;
     float: right;
     text-align: right;
     padding-top: 10px;
